Update README with Gemini API and latest features